[tool.poetry]
name = "directory-printer"
version = "0.1.0"
description = ""
authors = ["Thomas <thekileyenator@gmail.com>"]
readme = "README.md"
packages = [{include = "directory_printer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
