[tool.poetry]
name = "directory-printer"
version = "0.1.0"
description = ""
authors = ["Thomas <thekileyenator@gmail.com>"]
readme = "README.md"
packages = [{include = "directory_printer"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyfakefs = "^5.3.5"

[tool.poetry.scripts]
directory_printer = "directory_printer.directory_printer:print_directories"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
